Fixed dropdown menu on mobile

--- a/styles.css
+++ b/styles.css
@@ -337,8 +337,9 @@ iframe{
 }
 
 /* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {display: block;}
-
+@media (hover: hover) {
+    .dropdown:hover .dropdown-content {display: block;}
+}
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
     color:#ff8c00;
